--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,11 +1,15 @@
-  @Manual{worldbank,
-    title = {{WDI: World Development Indicators and Other World Bank Data}},
-    author = {Vincent Arel-Bundock},
-    year = {2022},
-    note = {R package version 2.7.8},
-    url = {https://CRAN.R-project.org/package=WDI},
-  }
-  
+@inproceedings{ash2020deep,
+  title={Deep Batch Active Learning by Diverse, Uncertain Gradient Lower Bounds},
+  author={Ash, Jordan T. and Zhang, Chicheng and Krishnamurthy, Akshay and Langford, John and Agarwal, Alekh},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2020},
+  eprint={1906.03671},
+  archivePrefix={arXiv},
+  primaryClass={cs.LG},
+  url={https://arxiv.org/abs/1906.03671},
+  doi={10.48550/arXiv.1906.03671}
+}
+
   @InCollection{knitr,
     booktitle = {Implementing Reproducible Computational Research},
     editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
