--- a/paper/references.bib
+++ b/paper/references.bib
@@ -10,295 +10,43 @@
   doi={10.48550/arXiv.1906.03671}
 }
 
-  @InCollection{knitr,
-    booktitle = {Implementing Reproducible Computational Research},
-    editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
-    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
-    author = {Yihui Xie},
-    publisher = {Chapman and Hall/CRC},
-    year = {2014},
-    note = {ISBN 978-1466561595},
-  }
-
-@Manual{citeR,
-    title = {{R: A Language and Environment for Statistical Computing}},
-    author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
-    address = {Vienna, Austria},
-    year = {2023},
-    url = {https://www.R-project.org/},
-  }
-
-  @Book{gg,
-    author = {Hadley Wickham},
-    title = {ggplot2: Elegant Graphics for Data Analysis},
-    publisher = {Springer-Verlag New York},
-    year = {2016},
-    isbn = {978-3-319-24277-4},
-    url = {https://ggplot2.tidyverse.org},
-  }
-  
-
-@Misc{rstanarm,
-    title = {{rstanarm: {Bayesian} applied regression modeling via {Stan}}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
-  }
-  
-  
-@book{tellingstories,
-    title = {Telling Stories with Data},
-    author = {Rohan Alexander},
-    year = {2023},
-    publisher = {Chapman; Hall/CRC},
-    url = {https://tellingstorieswithdata.com/}
-  }  
-  
-  @Article{tidy,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }
-
-  @Manual{arrow,
-    title = {arrow: Integration to 'Apache' 'Arrow'},
-    author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
-    year = {2024},
-    note = {R package version 17.0.0.1},
-    url = {https://CRAN.R-project.org/package=arrow},
-  }
-  
-    @Manual{here,
-    title = {here: A Simpler Way to Find Your Files},
-    author = {Kirill Müller},
-    year = {2020},
-    note = {R package version 1.0.1},
-    url = {https://CRAN.R-project.org/package=here},
-  }
-  
-    @Manual{dplyr,
-    title = {dplyr: A Grammar of Data Manipulation},
-    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
-    year = {2023},
-    note = {R package version 1.1.4},
-    url = {https://CRAN.R-project.org/package=dplyr},
-  }
-  
-  @misc{unicef2022underfive,
-  title = {Under-Five Mortality},
-  author = {{UNICEF}},
-  year = {2022},
-  url = {https://data.unicef.org/topic/child-survival/under-five-mortality/#:~:text=The%20under-five%20mortality%20rate%20refers%20to%20the%20probability,age%20of%205%20dying%20every%20day%20in%202022.},
-  note = {Accessed on November 16, 2024}
+@article{2010_Treu,
+  author    = {Tommaso Treu},
+  title     = {Strong Lensing by Galaxies},
+  journal   = {Annual Review of Astronomy and Astrophysics},
+  year      = {2010},
+  volume    = {48},
+  number    = {1},
+  pages     = {87--125},
+  month     = {aug},
+  publisher = {Annual Reviews},
+  doi       = {10.1146/annurev-astro-081309-130924},
+  url       = {https://doi.org/10.1146/annurev-astro-081309-130924}
 }
 
-@misc{who2024childmortality,
-  title = {Child Mortality and Causes of Death},
-  author = {{World Health Organization}},
-  year = {2024},
-  url = {https://www.who.int/data/gho/data/themes/topics/topic-details/GHO/child-mortality-and-causes-of-death},
-  note = {Accessed on November 16, 2024}
+@article{suyu2024strong,
+  author    = {Suyu, Sherry H. and Goobar, Ariel and Collett, Thomas E. and More, Anupreeta and Vernardos, Georgios},
+  title     = {Strong Gravitational Lensing and Microlensing of Supernovae},
+  journal   = {Space Science Reviews},
+  volume    = {220},
+  number    = {1},
+  pages     = {13},
+  year      = {2024},
+  month     = {feb},
+  publisher = {Springer},
+  doi       = {10.1007/s11214-024-01044-7},
+  url       = {https://doi.org/10.1007/s11214-024-01044-7}
 }
 
-@misc{who2024,
-  title = {Children: Reducing Mortality},
-  author = {{World Health Organization}},
-  year = {2024},
-  url = {https://www.who.int/news-room/fact-sheets/detail/children-reducing-mortality#:~:text=There%20are%20two%20targets%3A%201%20Reduce%20newborn%20mortality,25%20per%201000%20live%20births%20in%20every%20country.},
-  note = {Accessed November 18, 2024}
+@article{hsu2025leveraging,
+  author    = {Enshuo Hsu and Kirk Roberts},
+  title     = {Leveraging large language models for knowledge-free weak supervision in clinical natural language processing},
+  journal   = {Scientific Reports},
+  volume    = {15},
+  number    = {8241},
+  year      = {2025},
+  month     = {mar},
+  publisher = {Nature Publishing Group},
+  doi       = {10.1038/s41598-024-68168-2},
+  url       = {https://www.nature.com/articles/s41598-024-68168-2}
 }
-
-
-@misc{worldbank2024M,
-  author       = {{World Bank}},
-  title        = {Mortality Rate, Under-5 (per 1,000 Live Births)},
-  year         = {2024},
-  note         = {World Development Indicators},
-  url          = {https://data.worldbank.org/indicator/SH.DYN.MORT},
-  urldate      = {2024-11-19}
-}
-
-@misc{worldbank_foodindex2024,
-  author       = {{World Bank}},
-  title        = {Food Production Index (2014-2016 = 100)},
-  year         = {2024},
-  note         = {World Development Indicators},
-  url          = {https://data.worldbank.org/indicator/AG.PRD.FOOD.XD},
-  urldate      = {2024-11-19}
-}
-
-@misc{worldbank_health_expenditure_us,
-  author       = {{World Bank}},
-  title        = {Current Health Expenditure (% of GDP) - United States},
-  year         = {2024},
-  note         = {World Development Indicators},
-  url          = {https://data.worldbank.org/indicator/SH.XPD.CHEX.GD.ZS?locations=US},
-  urldate      = {2024-11-24}
-}
-
-@misc{worldbank_dpt_immunization,
-  author       = {{World Bank}},
-  title        = {Immunization, DPT (% of children ages 12-23 months)},
-  year         = {2024},
-  note         = {World Development Indicators},
-  url          = {https://data.worldbank.org/indicator/SH.IMM.IDPT},
-  urldate      = {2024-11-24}
-}
-
-@misc{who_dtp3_coverage,
-  author       = {{World Health Organization}},
-  title        = {Diphtheria Tetanus Toxoid and Pertussis (DTP3) Immunization Coverage Among 1-Year-Olds},
-  year         = {2024},
-  howpublished = {\url{https://www.who.int/data/gho/data/indicators/indicator-details/GHO/diphtheria-tetanus-toxoid-and-pertussis-(dtp3)-immunization-coverage-among-1-year-olds-(-)}},
-  note         = {Accessed: 2024-11-26}
-}
-
-@misc{WHO2024CRVS,
-  title        = {Civil Registration and Vital Statistics},
-  author       = {{World Health Organization}},
-  year         = {2024},
-  url          = {https://www.who.int/news-room/fact-sheets/detail/civil-registration-and-vital-statistics},
-  note         = {Accessed: 2024-11-27}
-}
-
-@article{Preston1984AgePattern,
-  author       = {Samuel H. Preston},
-  title        = {Children and the Age Pattern of Mortality},
-  journal      = {Population and Development Review},
-  volume       = {10},
-  number       = {1},
-  pages        = {69--76},
-  year         = {1984},
-  publisher    = {Population Council},
-  doi          = {10.2307/1171470},
-  url          = {https://www.jstor.org/stable/1171470?origin=crossref},
-  note         = {Accessed: 2024-11-27}
-}
-
-  @Article{ms,
-    title = {{modelsummary}: Data and Model Summaries in {R}},
-    author = {Vincent Arel-Bundock},
-    journal = {Journal of Statistical Software},
-    year = {2022},
-    volume = {103},
-    number = {1},
-    pages = {1--23},
-    doi = {10.18637/jss.v103.i01},
-  }
-  
-
-@article{sartorius2014global,
-  title = {Global infant mortality trends and attributable determinants – an ecological study using data from 192 countries for the period 1990–2011},
-  author = {Sartorius, Benn K. and Sartorius, Kurt},
-  journal = {Population Health Metrics},
-  volume = {12},
-  number = {1},
-  pages = {29},
-  year = {2014},
-  doi = {10.1186/s12963-014-0029-6},
-  url = {https://doi.org/10.1186/s12963-014-0029-6}
-}
-
-@article{ohare2013income,
-  title = {Income and child mortality in developing countries: a systematic review and meta-analysis},
-  author = {O’Hare, Bernadette and Makuta, Innocent and Chiwaula, Levison and Bar-Zeev, Nathan},
-  journal = {Journal of the Royal Society of Medicine},
-  volume = {106},
-  number = {10},
-  pages = {408--414},
-  year = {2013},
-  doi = {10.1177/0141076813489680},
-  url = {https://doi.org/10.1177/0141076813489680}
-}
-
-
-@article{finkelstein2024lives,
-  title = {Lives vs. Livelihoods: The Impact of the Great Recession on Mortality and Welfare},
-  author = {Finkelstein, Amy and Schilbach, Michael J. and Notowidigdo, Matthew F. and Zhang, Jintao},
-  year = {2024}
-}
-
-@article{DOERR2022110860,
-title = {Recessions and mortality: A global perspective},
-journal = {Economics Letters},
-volume = {220},
-pages = {110860},
-year = {2022},
-issn = {0165-1765},
-doi = {https://doi.org/10.1016/j.econlet.2022.110860},
-url = {https://www.sciencedirect.com/science/article/pii/S0165176522003342},
-author = {Sebastian Doerr and Boris Hofmann},
-keywords = {Crisis, Recession, Mortality, Child mortality, Economic development},
-}
-
-@misc{cdc_dtap,
-  title = {Diphtheria, Tetanus, and Pertussis (DTaP) Vaccine: What You Need to Know},
-  author = {{Centers for Disease Control and Prevention}},
-  year = {2024},
-  url = {https://www.cdc.gov/vaccines/hcp/vis/vis-statements/dtap.html#why-vaccinate},
-  note = {Accessed: 2024-11-28}
-}
-
-
-@misc{gbd2019,
-  author = {{Global Burden of Disease Collaborative Network}},
-  title = {Global Burden of Disease Study 2019 (GBD 2019) Results},
-  year = {2020},
-  publisher = {Institute for Health Metrics and Evaluation (IHME)},
-  address = {Seattle, United States},
-  url = {https://ghdx.healthdata.org/gbd-2019},
-  note = {Accessed: 2024-11-28}
-}
-
-@article{karlsson2024prevalence,
-  title = {Prevalence and Trends of Not Receiving a Dose of DPT-Containing Vaccine Among Children 12–35 Months: An Analysis of 81 Low- and Middle-Income Countries},
-  author = {Karlsson, Omar and Rajpal, Sunil and Johri, Mira and Kim, Rockli and Subramanian, SV},
-  journal = {Journal of Epidemiology and Global Health},
-  volume = {14},
-  number = {3},
-  pages = {460},
-  year = {2024},
-  month = {September},
-  doi = {10.1007/s44197-024-00294-6},
-  url = {https://link.springer.com/article/10.1007/s44197-024-00294-6}
-}
-
-@article{ray2020health,
-  title = {Health Expenditure, Longevity, and Child Mortality: Dynamic Panel Data Approach with Global Data},
-  author = {Ray, Devdatta and Linden, Mikael},
-  journal = {International Journal of Health Economics and Management},
-  volume = {20},
-  number = {1},
-  pages = {99--119},
-  year = {2020},
-  doi = {10.1007/s10754-019-09272-z},
-  url = {https://link.springer.com/article/10.1007/s10754-019-09272-z}
-}
-
-
-@misc{worldbank_data,
-  author       = {{The World Bank}},
-  title        = {World Bank Open Data},
-  year         = {2024},
-  url          = {https://data.worldbank.org/},
-  note         = {Accessed: 2024-11-29}
-}
-
-@Article{testthat,
-    author = {Hadley Wickham},
-    title = {testthat: Get Started with Testing},
-    journal = {The R Journal},
-    year = {2011},
-    volume = {3},
-    pages = {5--10},
-    url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
-  }
-
-
